--- a/build.xml
+++ b/build.xml
@@ -5,9 +5,13 @@
   <target name="-init"
 	  description="Initializes the needed properties">
     <property name="project.src" location="src"/>
+    <property name="project.lib" location="lib"/>
     <property name="project.target" location="target"/>
     <property name="project.classes" location="${project.target}/classes"/>
     <path id="compile.cp">
+      <fileset dir="${project.lib}">
+	<include name="*.jar"/>
+      </fileset>
     </path>
     <path id="runtime.cp">
       <path refid="compile.cp"/>
